<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_marginHorizontal="2dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_launcher_background"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/imageview_contentDescription"/>

            <ImageView
                android:layout_marginHorizontal="2dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_launcher_background"
                android:src="@drawable/ic_grass"
                app:tint="@color/white"
                android:contentDescription="@string/imageview_grass_contentDescription"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/red" />

        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="name"
                android:hint="@string/nome_completo_hint"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/data_de_nascimento_hint"
                android:inputType="date" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/numero_favorito_hint"
                android:inputType="number" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="phone"
                android:hint="@string/numero_de_telefone_hint"
                android:inputType="phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="emailAddress"
                android:hint="@string/endereco_de_email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="password"
                android:hint="@string/senha_hint"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="password"
                android:hint="@string/senha_numerica_hint"
                android:inputType="numberPassword" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/red" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="@color/aqua_marine">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="#D0D8ED"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/entendendo_linearlayout"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="#D0D8ED"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/entendendo_linearlayout"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="#D0D8ED"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/entendendo_linearlayout"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="#D0D8ED"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/entendendo_linearlayout"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>
        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="8dp"
            android:background="@color/yellow"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="3"
                android:background="#D0D8ED"
                android:fontFamily="monospace"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/entendendo_linearlayout"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:background="@android:color/holo_blue_bright"
                android:fontFamily="casual"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/entendendo_linearlayout"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/entendendo_linearlayout"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/purple"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#D0D8ED"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/entendendo_linearlayout"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#D0D8ED"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/entendendo_linearlayout"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#D0D8ED"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/entendendo_linearlayout"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#D0D8ED"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/entendendo_linearlayout"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
